[project]
name = "agentic-rag-using-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=6.31.0",
    "langchain>=0.3.28",
    "langchain-community>=0.4.1",
    "langchain-groq>=0.3.8",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.11",
    "langgraph-api>=0.8.7",
    "langgraph-cli[inmem]>=0.4.3",
    "langsmith>=0.4.37",
    "python-dotenv>=1.2.1",
]
